--- a/spec/spec_credentials.yml
+++ b/spec/spec_credentials.yml
@@ -1,5 +1,5 @@
 email: et@pharmware.net
-api_key: o69spvIyE3vtzLDxyyF7
+api_key: ryutzrJCMqoGDCMHJosr
 mme_code: LPharm1
 base_uri: https://watest.leafdatazone.com/api/v1
 state: wa
