updated test-api key

--- a/spec/spec_credentials.yml
+++ b/spec/spec_credentials.yml
@@ -1,5 +1,5 @@
 email: et@pharmware.net
-api_key: ryutzrJCMqoGDCMHJosr
+api_key: DLLyyoxnqHMHMJyuuzut
 mme_code: LPharm1
 base_uri: https://watest.leafdatazone.com/api/v1
 state: wa
