--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ DATA_DUMP.md
 WA_API.json
 DataLeaf_VALIDATION.rb
 DataLeaf_VALIDATION.txt
+
+spec/mca_credentials.yml
+
+spec/other_credentials.yml
